# cliply

./: Cargo.toml  README.markdown
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/modules/: cliply.rs  errors.rs  mod.rs
